THRIFT-5382 Netstd default list/set enums values are generated incorrectly Client netstd Patch: Thomas Bruggink

This closes #2364